Mockito_38/evosuite/evosuite-report/test_build.log
/home/liumengjiao/Desktop/CI/Benchmark/../bugs/Mockito_38_buggy/evosuite-tests/org/mockito/internal/verification/argumentmatching/ArgumentMatchingTool_ESTest.java:20: error: ArgumentMatchingTool() has private access in ArgumentMatchingTool
      ArgumentMatchingTool argumentMatchingTool0 = new ArgumentMatchingTool();
                                                   ^
1 error
